--- a/src/app/shared/layer-editor/layer-editor.component.html
+++ b/src/app/shared/layer-editor/layer-editor.component.html
@@ -1,5 +1,6 @@
 <form [formGroup]="form" class="w-full min-w-full max-w-full lg:min-w-450 lg:max-w-450 xl:min-w-550 xl:max-w-450">
   <div cdkDropList class="layer-list" (cdkDropListDropped)="drop($event)" formArrayName="layers">
+    <p class="text-center text-13 mt-30 mb-30" *ngIf="!form.controls.layers.length">No layers available</p>
     <div
       class="layer-box pt-20 px-20 min-h-100 bg-white text-14 cursor-move flex items-center"
       *ngFor="let layer of form.controls.layers.controls; let i = index"
@@ -9,9 +10,13 @@
         <div class="mb-15 flex items-center w-full" *ngIf="!layer.controls.edit.value; else editTemplate">
           <p class="w-full">{{ layer.controls.title.value || 'Untitled' }}</p>
 
-          <div class="ml-15">
+          <div class="ml-15 flex items-center">
             <button type="button" mat-icon-button color="primary" (click)="layer.controls.edit.setValue(true)">
               <mat-icon>edit</mat-icon>
+            </button>
+
+            <button type="button" mat-icon-button color="primary" class="ml-10" (click)="deleteLayer(i)">
+              <mat-icon>delete</mat-icon>
             </button>
           </div>
         </div>
