--- a/src/app/shared/preview/preview.component.html
+++ b/src/app/shared/preview/preview.component.html
@@ -1,13 +1,16 @@
 <mat-card>
   <div class="rounded min-h-400 relative text-12">
     <div
-      class="absolute inset-0 border border-gray-300 rounded flex justify-center"
+      class="absolute inset-0 border border-gray-300 rounded flex justify-center cursor-pointer"
       *ngFor="let layer of layers.slice(0, 6); let i = index; let last = last"
+      (click)="selectLayer(i)"
       [class.items-center]="last"
       [style.top.px]="30 * i"
       [style.bottom.px]="30 * i"
       [style.left.px]="30 * i"
       [style.right.px]="30 * i"
+      [class.bg-sky-300]="layer.selected"
+      [class.bg-white]="!layer.selected"
     >
       <p class="mt-5">{{ layer.title }}</p>
     </div>
